# optystuff

./: CMakeLists.txt  CMakeSettings.json  README.md  main.cpp
GradOpt/: GradOpt.cpp  GradOpt.h
GradOpt/AdaptGradStep/: AdaptGradStep.cpp  AdaptGradStep.h
GradOpt/FastGradStep/: FastGradStep.cpp  FastGradStep.h
Newton/: Newton.cpp  Newton.h
Numerical/: derivative.cpp  derivative.h  error.h  linalg.cpp  linalg.h  mat.cpp  mat.h  vec.cpp  vec.h  vecfun.cpp  vecfun.h
UniOpt/: UniOpt.cpp  UniOpt.h
UniOpt/Dih/: DihUniOpt.cpp  DihUniOpt.h
UniOpt/Fib/: FibUniOpt.cpp  FibUniOpt.h
app/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt
src/GradOpt/: AdaptGradStep.cpp  CMakeLists.txt  FastGradStep.cpp  GradOpt.cpp
src/GradOpt/include/opty/: AdaptGradStep.h  FastGradStep.h  GradOpt.h
src/Newton/: CMakeLists.txt  Newton.cpp
src/Newton/include/opty/: Newton.h
src/Numerical/: CMakeLists.txt  derivative.cpp  linalg.cpp  mat.cpp  vec.cpp
src/Numerical/include/opty/: linalg.h  mat.h  vec.h
src/UniOpt/: CMakeLists.txt  DihUniOpt.cpp  FibUniOpt.cpp  UniOpt.cpp
src/UniOpt/include/opty/: DihUniOpt.h  FibUniOpt.h
